--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Console Output</title>
-    <link rel="stylesheet" href="bulma.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
 
